# UGIShaderCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ShaderCompiler/: CMakeLists.txt  UGITypes.h  shaderCompilerMain.cpp  shaderCompilerUtility.h
